// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generic component: <Icon /> renders activated version correctly 1`] = `
<RCTSafeAreaView
  activated={true}
  defaultActivatedColor="#53C000"
  defaultColor="#b8b8b8"
  name="backButton"
  size={15}
>
  <Svg />
</RCTSafeAreaView>
`;

exports[`Generic component: <Icon /> renders correctly 1`] = `
<RCTSafeAreaView
  activated={false}
  defaultActivatedColor="#53C000"
  defaultColor="#b8b8b8"
  name="backButton"
  size={15}
>
  <Svg />
</RCTSafeAreaView>
`;

exports[`Generic component: <Icon /> renders with activated version with custom color correctly 1`] = `
<RCTSafeAreaView
  activated={true}
  defaultActivatedColor="#5AADEB"
  defaultColor="#b8b8b8"
  name="backButton"
  size={15}
>
  <Svg />
</RCTSafeAreaView>
`;

exports[`Generic component: <Icon /> renders with defaultColor correctly 1`] = `
<RCTSafeAreaView
  activated={false}
  defaultActivatedColor="#53C000"
  defaultColor="#333333"
  name="backButton"
  size={15}
>
  <Svg />
</RCTSafeAreaView>
`;
